--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+  <dialog-outlet></dialog-outlet>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.js"></script> 
 </body>
 </html>
