--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,10 @@
 <body>
   <app-root>Loading...</app-root>
   <dialog-outlet></dialog-outlet>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.3.1/js/swiper.js"></script>
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <script src="./node_modules/material-design-lite/material.min.js"></script>
-  
+
 </body>
 </html>
